newclay/test/Compiler/StaticEvaluator/Fail/SelfImportNonexistentSymbol/main.clay
import __primitives__.*;
import FailSelfImportNonexistentSymbol.*;

symbol Main;
overload #Main() = Factorial(8);
